# PyTorch-Learning

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
scripts/: 0.01_tensors.py  0.05_differentiation.py  0.06_optimizing.py  0.07_save.py  00_mnist.py  02_datasets.py  03_transforms.py  04_neuralnetworks.py  1.01_classifier.py  1.02_poly.py
scripts/deep_learning_course/: 00_pytorch-fundamentals.py
scripts/pytorch/: 1.00_neuralnetworks.py  1.02_autogradFn.py
src/pytorch_learning/: __init__.py
