[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-learning"
version = "0.1.0"
description = "PyTorch learning repository"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # PyTorch (CPU-only, suitable for macOS)
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    
    # Data manipulation & scientific computing
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    
    # Jupyter notebooks
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    
    # Machine learning utilities
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    
    # Image processing
    "pillow>=10.2.0",
    
    # Experiment tracking & logging
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "ty",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.2.0",
    "ty",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytorch_learning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ty]
src = ["src"]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
